# electronics-shop-final

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml  django-ci.yml
cart/: models.py  serializers.py  views.py
cart/migrations/: 0001_initial.py
cart/templates/cart/: detail.html
config/: settings.py  urls.py
orders/: models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_remove_order_products_alter_order_total_price_and_more.py
orders/templates/orders/: cancel.html  create.html  history.html  success.html
products/: models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/templates/products/: product_detail.html  product_list.html
static/css/: style.css
templates/: base.html
tests/: test_products.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: base.html  login.html  profile.html  register.html
webhooks/: urls.py  views.py
